      number of physical cores (rather than CPUs) on Sparc Solaris.

      It can also do so on recent versions of Windows; however the
      default remains \code{detectCores(logical = TRUE)} on that
      platform.

      \item Reference classes now keep a record of which fields are
      locked.  \code{\$lock()} with no arguments returns the names
      of the locked fields.
    }
  }

  \subsection{INSTALLATION}{
    \itemize{
      \item On 64-bit Linux systems, \command{configure} now only sets
      \samp{LIBnn} to \code{lib64} if \file{/usr/lib64} exists.  This
      may obviate setting \samp{LIBnn} explicitly on Debian-derived
      systems.

      It is still necessary to set \samp{LIBnn = lib} for 32-bit builds
      of \R on a 64-bit OS on those Linux distributions capable for
      supporting that concept.
    }
  }
  
  \subsection{BUG FIXES}{
    \itemize{
      \item \code{stack()} now gives an error if no vector column is
      selected, rather than returning a 1-column data frame (contrary to
      its documentation).

      \item \code{summary.mlm()} did not handle objects where the
      formula had been specified by an expression.  (Reported by
      Helios de Rosario Martinez).
      
      \item \code{tools::deparseLatex(dropBraces=TRUE)} could drop
      text as well as braces.      
    }
  }
}

\section{\Rlogo CHANGES IN R VERSION 2.14.0}{
  \subsection{SIGNIFICANT USER-VISIBLE CHANGES}{
    \itemize{
      \item All packages must have a namespace, and one is created on
      installation if not supplied in the sources.  This means that any
      package without a namespace must be re-installed under this
      version of \R (but previously-installed data-only packages without
      \R code can still be used).

      \item The \code{yLineBias} of the \code{X11()} and
      \code{windows()} families of devices has been changed from 0.1 to
      0.2: this changes slightly the vertical positioning of text in the